Bug 56037 - [IVB] regression. partially transparent or black text after update to 2.20.10
Summary: [IVB] regression. partially transparent or black text after update to 2.20.10
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 56025 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-10-16 16:36 UTC by Oleksij Rempel
Modified: 2012-10-16 17:01 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
screenshot (238.09 KB, image/png)
2012-10-16 16:36 UTC, Oleksij Rempel
no flags Details

Description Oleksij Rempel 2012-10-16 16:36:32 UTC
Created attachment 68624 [details]
screenshot

I use xorg edgers ppa for testing. After update to 2.20.10 i get distructed image. Mostly text is affected. It looks in some places transparent, or just black.
See attached screenshot.

My hardware:
Asus Zenbook UX32A.
Intel(R) Core(TM) i5-3317U CPU @ 1.70GH

intel_stepping 
Vendor: 0x8086, Device: 0x0166, Revision: 0x09 (??)
render clock: unknown  sampler clock: unknown
Comment 1 Oleksij Rempel 2012-10-16 16:47:34 UTC
After installing older driver:
xserver-xorg-video-intel_2.20.9+git20121001.51202798-0ubuntu0sarvatt_amd64.deb

ever things go back to normal.
Comment 2 Chris Wilson 2012-10-16 17:01:03 UTC
*** Bug 56025 has been marked as a duplicate of this bug. ***
Comment 3 Chris Wilson 2012-10-16 17:01:27 UTC
commit 7927f9a351ead1a5593bc91e465706bdd889bb8d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Oct 16 17:56:30 2012 +0100

    sna/gen7: Filter BLEND flags for CA glyphs
    
    Fixes regression from commit c51aaa731e5cffc892e59730194ad7c98789b02b
    Author: Chris Wilson <chris@chris-wilson.co.uk>
    Date:   Thu Oct 11 11:36:00 2012 +0100
    
        sna/gen7: Replace bogus state tracking assertion
    
    The assumption being that we only used the encoded flags for determining
    the composite state is false for the magic CA pass.
    
    Reported-by: Oleksij Rempel <bug-track@fisher-privat.net>
    Reported-by: Eyal Lotem <eyal.lotem@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=56037
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.