sna/gen7: Filter BLEND flags for CA glyphs

Fixes regression from commit c51aaa731e5cffc892e59730194ad7c98789b02b
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Oct 11 11:36:00 2012 +0100

    sna/gen7: Replace bogus state tracking assertion

The assumption being that we only used the encoded flags for determining
the composite state is false for the magic CA pass.

Reported-by: Oleksij Rempel <bug-track@fisher-privat.net>
Reported-by: Eyal Lotem <eyal.lotem@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=56037
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>